# reactpy-jupyter

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST  MANIFEST.in  README.md  RELEASE.md  idom_jupyter.pth  install.json  noxfile.py  package-lock.json  package.json  pyproject.toml  reactpy_jupyter.pth  requirements.txt  setup.cfg  setup.py  vite.config.cjs
.github/workflows/: checks.yml  publish.yml
binder/: postBuild
idom-jupyter/: __init__.py  _version.py  example.py
idom_jupyter/: __init__.py  _version.py  example.py  import_resources.py  ipython_extension.py  jupyter_server_extension.py  widget.py
js/: README.md  package-lock.json  package.json  webpack.config.js
js/lib/: embed.js  example.js  extension.js  index.js  labplugin.js  widget.js
jupyter-config/jupyter_notebook_config.d/: idom-client-jupyter.json  idom-jupyter.json
jupyter-config/jupyter_server_config.d/: idom-jupyter.json  reactpy-jupyter.json
jupyter-config/notebook.d/: idom-client-jupyter.json
notebooks/: introduction.ipynb  test.ipynb
notebooks/data/: gallery-data.json
reactpy_jupyter/: __init__.py  component_widget.py  hooks.py  import_resources.py  ipython_extension.py  jupyter_server_extension.py  layout_widget.py  monkey_patch.py  widget.py  widget_component.py
src/: index.js
