[build-system]
requires = ["jupyter_packaging~=0.12.3", "setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E203", "E266", "E501", "W503", "F811", "N802", "N806"]
max-line-length = 88
max-complexity = 20
select = ["B", "C", "E", "F", "W", "T4", "B9", "N", "ROH"]
exclude = ["**/node_modules/*", ".eggs/*", ".nox/*"]
